--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Get a stunning, custom 3D logo designed for your brand. Our team delivers high-quality, affordable 3D logos with fast turnaround. Boost your brand identity today!">
-    <title>"Professional 3D Logo Design Services | Custom & Affordable"</title>
-    
+    <title>Professional 3D Logo Design Services | Custom & Affordable</title>
   </head>
   <body>
     <div id="root"></div>
